@@ -1692,7 +1692,7 @@
     </martialart>
     <martialart>
       <id>7bbd5565-5020-4ef1-8ff0-9329cbffcfa9</id>
-      <name>German Ju-Jutsu</name>
+      <name>German Jujitsu</name>
       <techniques>
         <technique>
           <name>Called Shot (Disarm)</name>
@@ -1807,6 +1807,164 @@
       <page>17</page>
     </martialart>
     <!-- End Region -->
+    <!-- Region Datapuls SOTA -->
+    <martialart>
+      <id>e253fc2a-87f5-4a20-9f2c-c0b9e54e0f6e</id>
+      <name>Arbeitskreis INI</name>
+      <bonus>
+        <addskillspecializationoption>
+          <skill>Blades</skill>
+          <spec>Arbeitskreis INI</spec>
+        </addskillspecializationoption>
+      </bonus>
+      <techniques>
+        <technique>
+          <name>Finishing Move</name>
+        </technique>
+        <technique>
+          <name>Half-Sword</name>
+        </technique>
+        <technique>
+          <name>Hammer Fist</name>
+        </technique>
+        <technique>
+          <name>Jiao Di</name>
+        </technique>
+        <technique>
+          <name>Knucklebreaker</name>
+        </technique>
+        <technique>
+          <name>Full Offense</name>
+        </technique>
+        <technique>
+          <name>Neijia</name>
+        </technique>
+        <technique>
+          <name>Strike the Darkness</name>
+        </technique>
+      </techniques>
+      <source>SOTG</source>
+      <page>6</page>
+	</martialart>
+	<martialart>
+      <id>e78deb308-4e17-4b86-b084-897009c55a15</id>
+      <name>Circle Fencing</name>
+      <bonus>
+        <addskillspecializationoption>
+          <skill>Blades</skill>
+          <spec>Circle Fencing</spec>
+        </addskillspecializationoption>
+      </bonus>
+      <techniques>
+        <technique>
+          <name>Called Shot (Feint)</name>
+        </technique>
+        <technique>
+          <name>Called Shot (Break Weapon)</name>
+        </technique>
+        <technique>
+          <name>Broken Fang</name>
+        </technique>
+        <technique>
+          <name>Herding</name>
+        </technique>
+        <technique>
+          <name>Multiple Opponent Combat</name>
+        </technique>
+        <technique>
+          <name>Two-Headed Snake</name>
+        </technique>
+        <technique>
+          <name>Neijia</name>
+        </technique>
+        <technique>
+          <name>Strike the Darkness</name>
+        </technique>
+      </techniques>
+      <source>SOTG</source>
+      <page>5</page>
+	</martialart>
+	<martialart>
+      <id>70f75f97-ba03-41a6-b591-7c3ae24953a2</id>
+      <name>Kreussler Fencing</name>
+      <bonus>
+        <addskillspecializationoption>
+          <skill>Blades</skill>
+          <spec>Kreussler Fencing</spec>
+        </addskillspecializationoption>
+        <addskillspecializationoption>
+          <skill>Clubs</skill>
+          <spec>Kreussler Fencing</spec>
+        </addskillspecializationoption>
+      </bonus>
+      <techniques>
+        <technique>
+          <name>Ballestra</name>
+        </technique>
+        <technique>
+          <name>Hammerfist</name>
+        </technique>
+        <technique>
+          <name>Iaijutsu</name>
+        </technique>
+        <technique>
+          <name>Knucklebreaker</name>
+        </technique>
+        <technique>
+          <name>Riposte</name>
+        </technique>
+        <technique>
+          <name>Yielding Force (Riposte)</name>
+        </technique>
+        <technique>
+          <name>Neijia</name>
+        </technique>
+        <technique>
+          <name>Strike the Darkness</name>
+        </technique>
+      </techniques>
+      <source>SOTG</source>
+      <page>5</page>
+	</martialart>
+	<martialart>
+      <id>736db820-cbe4-4a0b-b6c3-d90471117731</id>
+      <name>Asthenologica</name>
+      <bonus>
+        <addskillspecializationoption>
+          <skill>Unarmed Combat</skill>
+          <spec>Asthenologica</spec>
+        </addskillspecializationoption>
+      </bonus>
+      <techniques>
+        <technique>
+          <name>Clinch</name>
+        </technique>
+        <technique>
+          <name>Dim Mak</name>
+        </technique>
+        <technique>
+          <name>Multiple Opponent Combat</name>
+        </technique>
+        <technique>
+          <name>Defiant Dance</name>
+        </technique>
+        <technique>
+          <name>Stagger</name>
+        </technique>
+        <technique>
+          <name>Karmic Response</name>
+        </technique>
+        <technique>
+          <name>Neijia</name>
+        </technique>
+        <technique>
+          <name>Strike the Darkness</name>
+        </technique>
+      </techniques>
+      <source>SOTG</source>
+      <page>6</page>
+	</martialart>
+	<!-- End Region -->
   </martialarts>
   <techniques>
     <!-- Region Run and Gun -->
