@@ -21884,8 +21884,8 @@
             </martialart>
             <martialart>
                 <id>7bbd5565-5020-4ef1-8ff0-9329cbffcfa9</id>
-                <name>German Ju-Jutsu</name>
-                <translate>Ju-Jitsu Allemand</translate>
+                <name>German Jujitsu</name>
+                <translate>Jujitsu Allemand</translate>
                 <altpage>17</altpage>
             </martialart>
             <martialart translated="True">
