@@ -18707,8 +18707,8 @@
             </martialart>
             <martialart>
                 <id>7bbd5565-5020-4ef1-8ff0-9329cbffcfa9</id>
-                <name>German Ju-Jutsu</name>
-                <translate>German Ju-Jutsu</translate>
+                <name>German Jujitsu</name>
+                <translate>German Jujitsu</translate>
                 <altpage>17</altpage>
             </martialart>
             <martialart>
